<resources>
    <string name="app_name">VJTI APP</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="create_profile">Create Profile</string>
    <string name="email">Email</string>
    <string name="ThankYou">Thank You for signing up!</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="signedUp">Registered!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="vjti">VJTI</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="branch">Branch</string>
    <string name="year">Year</string>
    <string name="go_to_home">Go To Home Screen</string>
    <string name="coc">coc</string>
    <string name="techno">techno</string>
    <string name="prati">prati</string>
    <string name="enthu">enthu</string>
    <string name="community_of_coders">C.O.C</string>
    <string name="pratibimb">Pratibimb</string>
    <string name="technovanza">Technovanza</string>
    <string name="enthusia">Enthusia</string>
    <string name="academics">Academics</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="exit">Exit</string>
    <string name="campus_map">Campus Map</string>
    <string name="campus_location">Campus Location</string>
    <string name="map1">MAP</string>
    <string name="events1">EVENTS</string>
    <string name="profile1">PROFILE</string>
    <string name="vjti_home">VJTI APP - HOME</string>
    <string name="already_registerd_sign_in_here">Already Registered? Sign In here</string>
    <string name="user_login">User Login</string>
    <string name="enter_email1">  Enter email</string>
    <string name="not_have_an_account_signup_here"> Do not have an account? Signup Here</string>
    <string name="signup">Sign In</string>
    <string name="enter_password1">Enter password</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="browse_files">Browse Files</string>
    <string name="no_file_selected">No file selected</string>
    <string name="choose_subject">Choose Subject</string>
    <string name="save_changes">Save Changes</string>
    <string name="upload_files">Upload Files</string>
    <string name="download_files">Download Files</string>
    <string name="channel_name">notify</string>
    <string name="logout">Log Out</string>
    <string-array name="branches">
        <item>Computer</item>
        <item>Electronics</item>
        <item>IT</item>
        <item>EXTC</item>
        <item>Civil</item>
        <item>Textile</item>
        <item>Production</item>
        <item>Mechanical</item>
        <item>Electrical</item>
    </string-array>
    <string-array name="year">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Final</item>
    </string-array>
    <string-array name="Coc">
        <item>Facebook</item>
        <item>Instagram</item>
    </string-array>
    <string-array name="Techno">
        <item>Facebook</item>
        <item>Instagram</item>
    </string-array>
    <string-array name="Prati">
        <item>Facebook</item>
        <item>Instagram</item>
    </string-array>
    <string-array name="Enthu">
        <item>Facebook</item>
        <item>Instagram</item>
    </string-array>
    <string-array name="aero">
        <item>Facebook</item>
        <item>Website</item>
    </string-array>
    <string-array name="Second_year_comps">
        <item>Maths</item>
        <item>Discrete Maths</item>
        <item>DLD</item>
        <item>DS</item>
        <item>JAVA</item>
        <item>EVS</item>
        <item>COA</item>
        <item>PYTHON</item>
        <item>OTHER</item>
    </string-array>

    <string name="title_activity_admin">Admin</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="aero_vjti">Aero VJTI</string>
    <string name="vjti_racing">VJTI Racing</string>
    <string name="c_o_c">C.O.C</string>
    <string name="rangawardhan">Rangawardhan</string>
    <string name="vjti_racing1">VJTI RACING</string>
    <string name="aero_vjti1">AERO VJTI</string>
    <string name="s_r_a">S.R.A</string>
    <string name="d_l_a">D.L.A</string>
    <string name="e_cell">E-CELL</string>
</resources>
